Move infrastructure scripts to infrastructure folder

--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -8,10 +8,10 @@
     "node": "^16.0.0"
   },
   "scripts": {
-    "deploy": "../scripts/infrastructure/deploy.sh",
-    "preview": "../scripts/infrastructure/preview.sh",
+    "deploy": "./scripts/deploy.sh",
+    "preview": "./scripts/preview.sh",
     "lint": "prettier --write . && eslint --fix . --resolve-plugins-relative-to .",
-    "refresh": "../scripts/infrastructure/refresh.sh"
+    "refresh": "./scripts/refresh.sh"
   },
   "dependencies": {
     "@pulumi/aws": "^4.0.0",
