Fix tsconfig.json paths in Pulumi

--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -18,7 +18,8 @@
     "@pulumi/awsx": "^0.30.0",
     "@pulumi/pulumi": "^3.0.0",
     "@types/node": "^15.6.1",
-    "aws-sdk": "^2.912.0"
+    "aws-sdk": "^2.912.0",
+    "tsconfig-paths": "^3.11.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.24.0",
