--- a/infrastructure/tsconfig.json
+++ b/infrastructure/tsconfig.json
@@ -47,6 +47,7 @@
     "baseUrl": "." /* Base directory to resolve non-absolute module names. */,
     "paths": {
       "@cloudfront": ["cloudfront"],
+      "@route53": ["route53"],
       "@vars": ["vars"]
     } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
