--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^2.1.6",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@fontsource/fira-code": "^4.2.2",
     "@fontsource/lato": "^4.2.2",
     "@fontsource/rokkitt": "^4.2.2",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@mui/material": "^5.2.8",
     "aws-amplify": "^4.3.12",
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.12.0",
