--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "babel-plugin-styled-components": "^1.12.0",
     "crypto-browserify": "^3.12.0",
     "gatsby": "^4.5.0",
+    "gatsby-legacy-polyfills": "^2.5.0",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-image": "^2.5.0",
     "gatsby-plugin-sharp": "^4.5.0",
