--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-COGNITO_APP_CLIENT_ID=20qc4slu4pbciub20544gesu6b
-COGNITO_USER_POOL_ID=us-east-2_JLHXqBLCP
-JOKE_API_BASE_URL=https://jokes-api.dbowland.com
-JOKE_API_FETCH_COUNT=5
+GATSBY_COGNITO_APP_CLIENT_ID=20qc4slu4pbciub20544gesu6b
+GATSBY_COGNITO_USER_POOL_ID=us-east-2_JLHXqBLCP
+GATSBY_JOKE_API_BASE_URL=https://jokes-api.dbowland.com
+GATSBY_JOKE_API_FETCH_COUNT=5
