Use PATCH for updating jokes

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 GATSBY_COGNITO_APP_CLIENT_ID=o86e0r33q0pfekelprpcvmdou
 GATSBY_COGNITO_USER_POOL_ID=us-east-2_BwzCUS5q1
-GATSBY_JOKE_API_BASE_URL=https://jokes-api.bowland.link
+GATSBY_JOKE_API_BASE_URL=https://jokes-api.bowland.link/v1
 GATSBY_JOKE_API_FETCH_COUNT=3
