--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.12.0",
     "crypto-browserify": "^3.12.0",
+    "fast-json-patch": "^3.1.0",
     "gatsby": "^4.5.0",
     "gatsby-legacy-polyfills": "^2.5.0",
     "gatsby-plugin-alias-imports": "^1.0.5",
