--- a/template.yaml
+++ b/template.yaml
@@ -3,9 +3,6 @@ Description: >-
   Infrastructure for jokes UI
 
 Parameters:
-  AccountId:
-    Type: String
-    Description: AWS account ID
   Environment:
     Type: String
     Default: prod
@@ -89,7 +86,7 @@ Resources:
         PriceClass: 'PriceClass_100'
         ViewerCertificate:
           AcmCertificateArn: !Sub
-            - 'arn:aws:acm:us-east-1:${AccountId}:certificate/${Certificate}'
+            - 'arn:aws:acm:us-east-1:${AWS::AccountId}:certificate/${Certificate}'
             - Certificate: !FindInMap [EnvironmentMap, !Ref Environment, certificate]
           MinimumProtocolVersion: 'TLSv1.2_2018'
           SslSupportMethod: 'sni-only'
