--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -75,7 +75,7 @@ jobs:
             --region ${{ secrets.AWS_REGION }} \
             --no-fail-on-empty-changeset \
             --capabilities CAPABILITY_NAMED_IAM \
-            --parameter-overrides 'AccountId=${{ secrets.AWS_ACCOUNT_ID }} Environment=test'
+            --parameter-overrides 'Environment=test'
       - name: Copy static site to test S3 bucket
         run: ./scripts/copyToS3.sh ${TESTING_S3_BUCKET}
 
@@ -119,7 +119,7 @@ jobs:
             --region ${{ secrets.AWS_REGION }} \
             --no-fail-on-empty-changeset \
             --capabilities CAPABILITY_NAMED_IAM \
-            --parameter-overrides 'AccountId=${{ secrets.AWS_ACCOUNT_ID }} Environment=test'
+            --parameter-overrides 'Environment=test'
       - name: Copy static site to test S3 bucket
         run: ./scripts/copyToS3.sh ${{ env.TESTING_S3_BUCKET }}
 
@@ -161,8 +161,7 @@ jobs:
             --template-file ${{ env.TEMPLATE_NAME }} \
             --region ${{ secrets.AWS_REGION }} \
             --no-fail-on-empty-changeset \
-            --capabilities CAPABILITY_NAMED_IAM \
-            --parameter-overrides 'AccountId=${{ secrets.AWS_ACCOUNT_ID }}'
+            --capabilities CAPABILITY_NAMED_IAM
       - name: Copy static site to production S3 bucket
         run: ./scripts/copyToS3.sh ${{ env.PROD_S3_BUCKET }}
 
