Add analytics to every page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,6 +48,7 @@
     "paths": {
       "@assets/*": ["src/assets/*"],
       "@components/*": ["src/components/*"],
+      "@config/*": ["src/config/*"],
       "@pages/*": ["src/pages/*"],
       "@services/*": ["src/services/*"],
       "@test/*": ["test/*"]
