--- a/tsconfig.json
+++ b/tsconfig.json
@@ -51,6 +51,7 @@
       "@config/*": ["src/config/*"],
       "@pages/*": ["src/pages/*"],
       "@services/*": ["src/services/*"],
+      "@types": ["src/types"],
       "@test/*": ["test/*"]
     } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
