--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -86,6 +86,7 @@ jobs:
             --template-file ${{ env.TEMPLATE_NAME }} \
             --region ${{ secrets.AWS_REGION }} \
             --no-fail-on-empty-changeset \
+            --role-arn ${TESTING_CLOUDFORMATION_EXECUTION_ROLE} \
             --capabilities CAPABILITY_NAMED_IAM \
             --parameter-overrides 'Environment=test'
       - name: Copy static site to test S3 bucket
@@ -134,6 +135,7 @@ jobs:
             --template-file ${{ env.TEMPLATE_NAME }} \
             --region ${{ secrets.AWS_REGION }} \
             --no-fail-on-empty-changeset \
+            --role-arn ${TESTING_CLOUDFORMATION_EXECUTION_ROLE} \
             --capabilities CAPABILITY_NAMED_IAM \
             --parameter-overrides 'Environment=test'
       - name: Copy static site to test S3 bucket
@@ -181,6 +183,7 @@ jobs:
             --template-file ${{ env.TEMPLATE_NAME }} \
             --region ${{ secrets.AWS_REGION }} \
             --no-fail-on-empty-changeset \
+            --role-arn ${PROD_CLOUDFORMATION_EXECUTION_ROLE} \
             --capabilities CAPABILITY_NAMED_IAM
       - name: Copy static site to production S3 bucket
         run: ./scripts/copyToS3.sh ${{ env.PROD_S3_BUCKET }}
