--- a/template.yaml
+++ b/template.yaml
@@ -66,6 +66,19 @@ Resources:
       DistributionConfig:
         Aliases:
           - !FindInMap [EnvironmentMap, !Ref Environment, domain]
+        CustomErrorResponses:
+          - ErrorCode: 400
+            ResponseCode: 400
+            ResponsePagePath: /400.html
+          - ErrorCode: 403
+            ResponseCode: 403
+            ResponsePagePath: /403.html
+          - ErrorCode: 404
+            ResponseCode: 404
+            ResponsePagePath: /404.html
+          - ErrorCode: 500
+            ResponseCode: 500
+            ResponsePagePath: /500.html
         DefaultCacheBehavior:
           AllowedMethods:
             - 'GET'
