--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,10 @@
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single", { "avoidEscape": true }],
-    "semi": ["error", "never"]
+    "semi": ["error", "never"],
+    "sort-imports": ["error", { "allowSeparatedGroups": true }],
+    "sort-keys": ["error", "asc", { "caseSensitive": true, "natural": false }],
+    "sort-vars": ["error"]
   },
   "globals": {
     "exports": "writable",
