--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single", { "avoidEscape": true }],
+    "react/jsx-sort-props": ["error"],
     "semi": ["error", "never"],
     "sort-imports": ["error", { "allowSeparatedGroups": true }],
     "sort-keys": ["error", "asc", { "caseSensitive": true, "natural": false }],
