--- a/template.yaml
+++ b/template.yaml
@@ -69,16 +69,16 @@ Resources:
         CustomErrorResponses:
           - ErrorCode: 400
             ResponseCode: 400
-            ResponsePagePath: /400.html
+            ResponsePagePath: /400/index.html
           - ErrorCode: 403
             ResponseCode: 403
-            ResponsePagePath: /403.html
+            ResponsePagePath: /403/index.html
           - ErrorCode: 404
             ResponseCode: 404
-            ResponsePagePath: /404.html
+            ResponsePagePath: /404/index.html
           - ErrorCode: 500
             ResponseCode: 500
-            ResponsePagePath: /500.html
+            ResponsePagePath: /500/index.html
         DefaultCacheBehavior:
           AllowedMethods:
             - 'GET'
