--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -37,7 +37,8 @@ jobs:
         run: npm install -g npm@8
 
       - name: Install and audit packages
-        run: npm ci && npm audit --audit-level=critical
+        run: npm ci
+        # run: npm ci && npm audit --audit-level=critical
         env:
           NODE_ENV: test
       - name: Run tests
