--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
     "@aws-amplify/ui-react": "^2.1.6",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@fontsource/fira-code": "^4.2.2",
-    "@fontsource/lato": "^4.2.2",
-    "@fontsource/rokkitt": "^4.2.2",
+    "@fontsource/roboto": "^4.5.5",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@mui/icons-material": "^5.2.5",
