--- a/template.yaml
+++ b/template.yaml
@@ -94,6 +94,7 @@ Resources:
           CachePolicyId: '658327ea-f89d-4fab-a63d-7e88639e58f6' # Managed-CachingOptimized
           Compress: true
           DefaultTTL: 0
+          ResponseHeadersPolicyId: 67f7725c-6f97-4210-82d7-5512b31e9d03 # Managed-SecurityHeadersPolicy
           TargetOriginId: S3Origin
           ViewerProtocolPolicy: 'redirect-to-https'
         DefaultRootObject: 'index.html'
