--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "start": "gatsby develop",
     "serve": "npm run build && gatsby serve",
     "test": "jest --colors",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "update": "ncu -u && npm i --legacy-peer-deps && npm run test && npm dedupe --legacy-peer-deps"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
@@ -37,7 +38,7 @@
     ]
   },
   "dependencies": {
-    "@aws-amplify/ui-react": "^3.5.1",
+    "@aws-amplify/ui-react": "^3.5.2",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@fontsource/roboto": "^4.5.8",
@@ -75,7 +76,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@types/jest": "^29.0.2",
+    "@types/jest": "^29.0.3",
     "@types/node": "^18.7.18",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
@@ -89,7 +90,7 @@
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
     "lint-staged": "^13.0.3",
-    "msw": "^0.47.2",
+    "msw": "^0.47.3",
     "prettier": "^2.7.1",
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.0.1"
