--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "serve": "npm run build && gatsby serve",
     "test": "jest --colors",
     "typecheck": "tsc --noEmit",
-    "update": "ncu -u && npm i --legacy-peer-deps && npm audit fix --legacy-peer-deps && npm run test && npm dedupe --legacy-peer-deps"
+    "update": "ncu -u --doctor && npm audit fix --audit-level=none && npm run test && npm dedupe"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
@@ -44,53 +44,54 @@
     "@fontsource/roboto": "^4.5.8",
     "@mdx-js/mdx": "^2.1.5",
     "@mdx-js/react": "^2.1.5",
-    "@mui/icons-material": "^5.10.9",
-    "@mui/lab": "^5.0.0-alpha.105",
-    "@mui/material": "^5.10.11",
+    "@mui/icons-material": "^5.10.16",
+    "@mui/lab": "^5.0.0-alpha.110",
+    "@mui/material": "^5.10.16",
     "aws-amplify": "^4.3.42",
     "babel-plugin-styled-components": "^2.0.7",
     "crypto-browserify": "^3.12.0",
     "fast-json-patch": "^3.1.1",
-    "gatsby": "^4.24.5",
-    "gatsby-legacy-polyfills": "^2.24.0",
+    "gatsby": "^5.2.0",
+    "gatsby-legacy-polyfills": "^3.2.0",
     "gatsby-plugin-alias-imports": "^1.0.5",
-    "gatsby-plugin-image": "^2.24.0",
-    "gatsby-plugin-mdx": "^4.3.0",
-    "gatsby-plugin-react-helmet": "^5.24.0",
-    "gatsby-plugin-sass": "^5.24.0",
-    "gatsby-plugin-sharp": "^4.24.0",
-    "gatsby-plugin-sitemap": "^5.24.0",
-    "gatsby-plugin-styled-components": "^5.24.0",
-    "gatsby-source-filesystem": "^4.24.0",
-    "gatsby-transformer-sharp": "^4.24.0",
+    "gatsby-plugin-image": "^3.2.0",
+    "gatsby-plugin-mdx": "^5.2.0",
+    "gatsby-plugin-react-helmet": "^6.2.0",
+    "gatsby-plugin-sass": "^6.2.0",
+    "gatsby-plugin-sharp": "^5.2.0",
+    "gatsby-plugin-sitemap": "^6.2.0",
+    "gatsby-plugin-styled-components": "^6.2.0",
+    "gatsby-source-filesystem": "^5.2.0",
+    "gatsby-transformer-sharp": "^5.2.0",
+    "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.6",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.3"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@types/jest": "^29.2.0",
-    "@types/node": "^18.11.8",
-    "@types/react": "^18.0.24",
-    "@types/react-dom": "^18.0.8",
-    "@types/react-helmet": "^6.1.5",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.11",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@types/react-helmet": "^6.1.6",
     "@types/styled-components": "^5.1.26",
-    "babel-jest": "^29.2.2",
-    "babel-preset-gatsby": "^2.24.0",
+    "babel-jest": "^29.3.1",
+    "babel-preset-gatsby": "^3.2.0",
     "eslint-config-prettier": "^8.5.0",
-    "husky": "^8.0.1",
+    "husky": "^8.0.2",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.2.2",
-    "jest-environment-jsdom": "^29.2.2",
-    "lint-staged": "^13.0.3",
-    "msw": "^0.47.4",
-    "prettier": "^2.7.1",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "lint-staged": "^13.1.0",
+    "msw": "^0.49.1",
+    "prettier": "^2.8.0",
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.0.3"
   }
