Disallow negated conditionals

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,11 @@
     "es2021": true
   },
   "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:@typescript-eslint/recommended", "prettier"],
+  "globals": {
+    "exports": "writable",
+    "module": "readonly",
+    "require": "readonly"
+  },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
@@ -14,10 +19,12 @@
   },
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
-    "@typescript-eslint/no-unused-vars": ["error", { "varsIgnorePattern": "_" }],
     "@typescript-eslint/no-explicit-any": ["off"],
+    "@typescript-eslint/no-non-null-assertion": ["off"],
+    "@typescript-eslint/no-unused-vars": ["error", { "varsIgnorePattern": "_" }],
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
+    "no-negated-condition": ["error"],
     "quotes": ["error", "single", { "avoidEscape": true }],
     "react/jsx-sort-props": ["error"],
     "semi": ["error", "never"],
@@ -25,9 +32,9 @@
     "sort-keys": ["error", "asc", { "caseSensitive": false, "natural": false }],
     "sort-vars": ["error"]
   },
-  "globals": {
-    "exports": "writable",
-    "module": "readonly",
-    "require": "readonly"
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
