--- a/package.json
+++ b/package.json
@@ -25,65 +25,67 @@
     "serve": "npm run build && gatsby serve",
     "test": "jest --colors",
     "typecheck": "tsc --noEmit",
-    "update": "ncu -u -x '@types/node' --doctor && npm audit fix --audit-level=none && npm run test && npm dedupe"
+    "update": "ncu --doctor --target minor --upgrade && npm audit fix --audit-level=none && npm run test && npm dedupe"
   },
   "dependencies": {
-    "@aws-amplify/ui-react": "^4.6.1",
-    "@emotion/react": "^11.11.0",
+    "@aws-amplify/ui-react": "^4.6.5",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^4.5.8",
     "@mdx-js/mdx": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/lab": "^5.0.0-alpha.129",
-    "@mui/material": "^5.13.0",
-    "aws-amplify": "^5.2.1",
-    "babel-plugin-styled-components": "^2.1.1",
+    "@mui/icons-material": "^5.15.4",
+    "@mui/lab": "^5.0.0-alpha.160",
+    "@mui/material": "^5.15.4",
+    "aws-amplify": "^5.3.15",
+    "babel-plugin-styled-components": "^2.1.4",
     "crypto-browserify": "^3.12.0",
     "fast-json-patch": "^3.1.1",
-    "gatsby": "^5.9.1",
-    "gatsby-legacy-polyfills": "^3.9.0",
+    "gatsby": "^5.13.1",
+    "gatsby-legacy-polyfills": "^3.13.0",
     "gatsby-plugin-alias-imports": "^1.0.5",
-    "gatsby-plugin-image": "^3.9.0",
-    "gatsby-plugin-mdx": "^5.9.0",
-    "gatsby-plugin-react-helmet": "^6.9.0",
-    "gatsby-plugin-sass": "^6.9.0",
-    "gatsby-plugin-sharp": "^5.9.0",
-    "gatsby-plugin-sitemap": "^6.9.0",
-    "gatsby-plugin-styled-components": "^6.9.0",
-    "gatsby-source-filesystem": "^5.9.0",
-    "gatsby-transformer-sharp": "^5.9.0",
-    "graphql": "^16.6.0",
+    "gatsby-plugin-image": "^3.13.0",
+    "gatsby-plugin-mdx": "^5.13.0",
+    "gatsby-plugin-react-helmet": "^6.13.0",
+    "gatsby-plugin-sass": "^6.13.0",
+    "gatsby-plugin-sharp": "^5.13.0",
+    "gatsby-plugin-sitemap": "^6.13.0",
+    "gatsby-plugin-styled-components": "^6.13.0",
+    "gatsby-source-filesystem": "^5.13.0",
+    "gatsby-transformer-sharp": "^5.13.0",
+    "graphql": "^16.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "stream-browserify": "^3.0.0",
-    "styled-components": "^5.3.10",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "styled-components": "^5.3.11",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.21.5",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.1",
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4",
-    "@types/react-helmet": "^6.1.6",
-    "@types/styled-components": "^5.1.26",
-    "babel-jest": "^29.5.0",
-    "babel-preset-gatsby": "^3.9.0",
-    "eslint-config-prettier": "^8.8.0",
+    "@babel/preset-typescript": "^7.23.3",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^18.19.6",
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18",
+    "@types/react-helmet": "^6.1.11",
+    "@types/styled-components": "^5.1.34",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "babel-jest": "^29.7.0",
+    "babel-preset-gatsby": "^3.13.0",
+    "eslint-config-prettier": "^8.10.0",
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "lint-staged": "^13.2.2",
-    "msw": "^1.2.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^13.3.0",
+    "msw": "^1.3.2",
     "prettier": "^2.8.8",
     "react-test-renderer": "^18.2.0",
-    "ts-jest": "^29.1.0"
+    "ts-jest": "^29.1.1"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
