--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,13 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:@typescript-eslint/recommended", "prettier"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:@tanstack/eslint-plugin-query/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
+  ],
   "globals": {
     "exports": "writable",
     "module": "readonly",
@@ -17,20 +23,20 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react", "@typescript-eslint"],
+  "plugins": ["react", "testing-library", "@typescript-eslint"],
   "rules": {
-    "@typescript-eslint/no-explicit-any": ["off"],
-    "@typescript-eslint/no-non-null-assertion": ["off"],
-    "@typescript-eslint/no-unused-vars": ["error", { "varsIgnorePattern": "_" }],
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-unused-vars": "error",
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
     "no-negated-condition": ["error"],
     "quotes": ["error", "single", { "avoidEscape": true }],
-    "react/jsx-sort-props": ["error"],
+    "react/jsx-sort-props": "error",
     "semi": ["error", "never"],
     "sort-imports": ["error", { "allowSeparatedGroups": true, "ignoreCase": true }],
     "sort-keys": ["error", "asc", { "caseSensitive": false, "natural": false }],
-    "sort-vars": ["error"]
+    "sort-vars": "error"
   },
   "settings": {
     "react": {
