--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.15",
+    "@tanstack/react-query": "^5.29.2",
     "aws-amplify": "^5.3.18",
     "babel-plugin-styled-components": "^2.1.4",
     "crypto-browserify": "^3.12.0",
@@ -64,11 +65,12 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.24.1",
+    "@tanstack/eslint-plugin-query": "^5.28.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.3.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^18.19.31",
-    "@types/react": "^18.2.78",
+    "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "@types/react-helmet": "^6.1.11",
     "@types/styled-components": "^5.1.34",
@@ -77,6 +79,7 @@
     "babel-jest": "^29.7.0",
     "babel-preset-gatsby": "^3.13.2",
     "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-testing-library": "^6.2.2",
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
