--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "@tanstack/eslint-plugin-query": "^5.68.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.6.1",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.28",
     "@types/react": "^18.3.20",
@@ -86,7 +88,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^13.3.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.5.3",
     "react-test-renderer": "^18.3.1",
     "ts-jest": "^29.3.0"
   },
