--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,6 +49,7 @@
       "@assets/*": ["src/assets/*"],
       "@components/*": ["src/components/*"],
       "@config/*": ["src/config/*"],
+      "@hooks/*": ["src/hooks/*"],
       "@pages/*": ["src/pages/*"],
       "@services/*": ["src/services/*"],
       "@test/*": ["test/*"],
