Change linting imports

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,9 @@
 {
-  "importOrder": ["<THIRD_PARTY_MODULES>", "^@mui", "^[./]"],
+  "importOrder": [
+    "<THIRD_PARTY_MODULES>",
+    "^@mui",
+    "^(\\.+/|@assets|@config|@events|@handlers|@services|@types|@utils)"
+  ],
   "importOrderCaseInsensitive": true,
   "importOrderSeparation": true,
   "plugins": ["@trivago/prettier-plugin-sort-imports"],
